Fix relative paths

--- a/instantsearch.html
+++ b/instantsearch.html
@@ -15,12 +15,12 @@
     <link rel="alternate" data-abc-platform="mobile" media="only screen and (max-width: 640px)" href="http://mobile.abc.net.au/"
     />
     <link rel="alternate" type="application/rss+xml" href="http://www.abc.net.au/homepage/rss.xml" />
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" media="all" href="homepage/2013/styles/combined.min.css%3F20171228163719.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.4.1/dist/instantsearch.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.4.1/dist/instantsearch-theme-algolia.min.css">
-    <link rel="stylesheet" type="text/css" media="all" href="/assets/style/instantsearch.css" />
-    <link rel="stylesheet" type="text/css" media="all" href="/assets/style/override.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="assets/style/instantsearch.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="assets/style/override.css" />
 </head>
 
 <!--[if lte IE 7 ]><body id="home" class="ie ie7 platform-standard"><![endif]-->
