Refinement list style

--- a/instantsearch.html
+++ b/instantsearch.html
@@ -113,10 +113,12 @@
                         </div>
                         <div class="hit-elem-title">
                             <div class="instant-article-sub">
-                                <span class="article-date">{{{dates.displayPublished}}}</span>
-                                <span class="article-attribution">{{{_highlightResult.attribution.value}}}</span>    
+                                <span class="article-attribution">{{{_highlightResult.attribution.value}}}</span>
+                                <span class="article-date">{{{dates.displayPublished}}}</span>    
                             </div>
                         </div>
+                        <!-- <p>{{{_embedded.mediaRelated.0.media.image.primary.images.4x3}}}</p>
+                        <p>{{{_embedded.mediaThumbnail.images.4x3}}}</p> -->
                         <p class="article-synopsis">{{{_snippetResult.synopsis.value}}}</p>
                     </div>
                 </div>
