--- a/index.html
+++ b/index.html
@@ -1052,9 +1052,63 @@
 	</div>
 
 	<!-- TEMPLATES -->
-	<script type="text/html" id="article-template">
+    <script type="text/html" id="article-template">
 		<div class="hit">
 			<div class="hit-card col-xs-12">
+				<a href={{canonicalURL}}>
+					<div class ="hit-card-content">
+						<div class="article-image-container">
+							<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}">
+						</div>
+						<div class="article-text-container">
+							<div class="hit-elem-title">
+								<span>{{{_highlightResult.title.value}}}</span>
+							</div>
+							<div class="hit-elem-title">
+								<div class="instant-article-sub">
+									<span class="article-attribution">{{{_highlightResult.attribution.value}}}</span>
+									<span class="article-date">{{{dates.displayPublished}}}</span>    
+								</div>
+							</div>
+							<!-- <p>{{{_embedded.mediaRelated.0.media.image.primary.images.4x3}}}</p>
+							<p>{{{_embedded.mediaThumbnail.images.4x3}}}</p> -->
+							<p class="article-synopsis">{{{_snippetResult.synopsis.value}}}</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	  </script>
+	
+		<script type="text/html" id="iview-template">
+		<div class="hit">
+			<div class="hit-card col-xs-12">
+				<a href={{canonicalURL}}>
+				<div class ="hit-card-content">
+					<div class="article-image-container">
+						<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}">
+					</div>
+					<div class="article-text-container">
+						<div class="hit-elem-title">
+							<span>{{{_highlightResult.series.title.value}}}</span>
+						</div>
+						<div class="hit-elem-title">
+							<div class="instant-article-sub">
+								<span class="episode">Episode: {{{_highlightResult.title.value}}}</span>
+							</div>
+						</div>
+						<p class="article-synopsis">{{{_snippetResult.synopsis.value}}}</p>
+					</div>
+				</div>
+				</a>
+			</div>
+		</div>
+	  </script>
+	
+		<script type="text/html" id="radio-template">
+		<div class="hit">
+			<div class="hit-card col-xs-12">
+				<a href={{canonicalURL}}>
 				<div class ="hit-card-content">
 					<div class="article-image-container">
 						<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}">
@@ -1065,14 +1119,38 @@
 						</div>
 						<div class="hit-elem-title">
 							<div class="instant-article-sub">
-								<span class="article-attribution">{{{_highlightResult.attribution.value}}}</span>
+								<span class="article-date">{{{dates.displayPublished}}}</span>
+								<span class="article-attribution">{{{genre}}}</span>
+							</div>
+						</div>
+						<p class="article-synopsis">{{{_snippetResult.synopsis.value}}}</p>
+					</div>
+				</div>
+				</a>
+			</div>
+		</div>
+	  </script>
+		<script type="text/html" id="tv-template">
+		<div class="hit">
+			<div class="hit-card col-xs-12">
+				<a href={{canonicalURL}}>
+				<div class ="hit-card-content">
+					<div class="article-image-container">
+						<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}">
+					</div>
+					<div class="article-text-container">
+						<div class="hit-elem-title">
+							<span>{{{_highlightResult.title.value}}}</span>
+						</div>
+						<div class="hit-elem-title">
+							<div class="instant-article-sub">
 								<span class="article-date">{{{dates.displayPublished}}}</span>
 							</div>
 						</div>
-	
-						<p class="article-synopsis">{{{synopsis}}}</p>
+						<p class="article-synopsis">{{{_snippetResult.synopsis.value}}}</p>
 					</div>
 				</div>
+				</a>
 			</div>
 		</div>
 	  </script>
@@ -1087,7 +1165,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearchLite.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
 	<script src="assets/js/vue-nav.js"></script>
-	<script src="assets/js/curr-index.js"></script>
 	<script src="assets/js/algolia-autocomplete.js"></script>
 	<script src="/assets/js/banner-widget.js"></script>
     <script src="/assets/js/is-settings.js"></script>
