Improve no results page

--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
 	</div>
 
 	<!-- TEMPLATES -->
-    <script type="text/html" id="article-template">
+	<script type="text/html" id="article-template">
 		<div class="hit">
 			<div class="hit-card col-xs-12">
 				<a href={{canonicalURL}}>
@@ -1079,8 +1079,8 @@
 			</div>
 		</div>
 	  </script>
-	
-		<script type="text/html" id="iview-template">
+
+	<script type="text/html" id="iview-template">
 		<div class="hit">
 			<div class="hit-card col-xs-12">
 				<a href={{canonicalURL}}>
@@ -1104,8 +1104,8 @@
 			</div>
 		</div>
 	  </script>
-	
-		<script type="text/html" id="radio-template">
+
+	<script type="text/html" id="radio-template">
 		<div class="hit">
 			<div class="hit-card col-xs-12">
 				<a href={{canonicalURL}}>
@@ -1130,7 +1130,7 @@
 			</div>
 		</div>
 	  </script>
-		<script type="text/html" id="tv-template">
+	<script type="text/html" id="tv-template">
 		<div class="hit">
 			<div class="hit-card col-xs-12">
 				<a href={{canonicalURL}}>
@@ -1154,6 +1154,43 @@
 			</div>
 		</div>
 	  </script>
+
+
+	<script type="text/html" id="empty-template">
+		<div class="no---results-wrapper">
+			<span class="title">No results found matching <em>{{{query}}}</em></span>
+		<div id="popular-queries" class="title">Popular Queries</div>
+		<div class="no-hit-keywords-wrapper">
+			<div class="keyword-wrapper">
+				<a href="http://www.abc.net.au/heywire/">
+					<div class="keyword-text-wrapper">
+						<span class="title">HeyWire</span>
+					</div>
+				</a>
+			</div>
+			<div class="keyword-wrapper">
+				<a href="http://www.abc.net.au/tv/programs/next-step/">
+					<div class="keyword-text-wrapper">
+						<span class="title">The Next Step</span>
+					</div>
+				</a>
+			</div>
+			<div class="keyword-wrapper">
+				<a href="http://www.abc.net.au/4corners/">
+					<div class="keyword-text-wrapper">
+						<span class="title">Four Corners</span>
+					</div>
+				</a>
+			</div>
+			<div class="keyword-wrapper">
+				<a href="http://www.abc.net.au/tv/programs/little-lunch/">
+					<div class="keyword-text-wrapper">
+						<span class="title">Little Lunch</span>
+					</div>
+				</a>
+			</div>
+		</div>
+	</script>
 	<!-- /TEMPLATES -->
 
 	<!-- SCRIPTS -->
@@ -1167,8 +1204,8 @@
 	<script src="assets/js/vue-nav.js"></script>
 	<script src="assets/js/algolia-autocomplete.js"></script>
 	<script src="/assets/js/banner-widget.js"></script>
-    <script src="/assets/js/is-settings.js"></script>
-    <script src="/assets/js/algolia-search.js"></script>
+	<script src="/assets/js/is-settings.js"></script>
+	<script src="/assets/js/algolia-search.js"></script>
 	<!-- /SCRIPTS -->
 </body>
 
