Add current refinements list

--- a/index.html
+++ b/index.html
@@ -1044,6 +1044,7 @@
 					<div class="refinement-list" id="author-facet"></div>
 				</div>
 				<div class="hitsContainer">
+					<div id="current-refined-values"></div>
 					<div id="hits"></div>
 					<div id="pagination-container"></div>
 				</div>
