Update relative paths

--- a/index.html
+++ b/index.html
@@ -1204,9 +1204,9 @@
 	<script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
 	<script src="assets/js/vue-nav.js"></script>
 	<script src="assets/js/algolia-autocomplete.js"></script>
-	<script src="/assets/js/banner-widget.js"></script>
-	<script src="/assets/js/is-settings.js"></script>
-	<script src="/assets/js/algolia-search.js"></script>
+	<script src="assets/js/banner-widget.js"></script>
+	<script src="assets/js/is-settings.js"></script>
+	<script src="assets/js/algolia-search.js"></script>
 	<!-- /SCRIPTS -->
 </body>
 
