--- a/instantsearch.html
+++ b/instantsearch.html
@@ -207,9 +207,9 @@
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@3/dist/algoliasearchLite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
     <script src="assets/js/vue-nav.js"></script>
-    <script src="/assets/js/banner-widget.js"></script>
-    <script src="/assets/js/is-settings.js"></script>
-    <script src="/assets/js/algolia-search.js"></script>
+    <script src="assets/js/banner-widget.js"></script>
+    <script src="assets/js/is-settings.js"></script>
+    <script src="assets/js/algolia-search.js"></script>
     <!-- /SCRIPTS -->
 </body>
 
