--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@
 				<a href={{canonicalURL}}>
 					<div class ="hit-card-content">
 						<div class="article-image-container">
-							<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
+							<img src="https://res.cloudinary.com/algolia-maria/image/fetch/{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
 						</div>
 						<div class="article-text-container">
 							<div class="hit-elem-title">
@@ -1087,7 +1087,7 @@
 				<a href={{canonicalURL}}>
 				<div class ="hit-card-content">
 					<div class="article-image-container">
-						<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
+						<img src="https://res.cloudinary.com/algolia-maria/image/fetch/{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
 					</div>
 					<div class="article-text-container">
 						<div class="hit-elem-title">
@@ -1112,7 +1112,7 @@
 				<a href={{canonicalURL}}>
 				<div class ="hit-card-content">
 					<div class="article-image-container">
-						<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
+						<img src="https://res.cloudinary.com/algolia-maria/image/fetch/{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
 					</div>
 					<div class="article-text-container">
 						<div class="hit-elem-title">
@@ -1137,7 +1137,7 @@
 				<a href={{canonicalURL}}>
 				<div class ="hit-card-content">
 					<div class="article-image-container">
-						<img src="{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
+						<img src="https://res.cloudinary.com/algolia-maria/image/fetch/{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/news-default.png') this.src = 'homepage/2013/styles/img/news-default.png';">
 					</div>
 					<div class="article-text-container">
 						<div class="hit-elem-title">
