--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
 						<div class="article-image-container">
 							<!-- <p>{{{_embedded.mediaThumbnail.images.4x3}}}</p>
 							<p>{{{_embedded.mediaRelated.0.media.image.primary.images.4x3}}}</p> -->
-							<img src="https://res.cloudinary.com/algolia-maria/image/fetch/{{_embedded.mediaRelated.0.media.image.primary.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/default-2.png') this.src = 'homepage/2013/styles/img/default-2.png';">
+							<img src="https://res.cloudinary.com/algolia-maria/image/fetch/{{_embedded.mediaThumbnail.images.4x3}}" alt="{{_embedded.mediaThumbnail.alt}}" onerror="if (this.src != 'homepage/2013/styles/img/default-2.png') this.src = 'homepage/2013/styles/img/default-2.png';">
 						</div>
 						<div class="article-text-container">
 							<div class="hit-elem-title">
